# obot-monorepo

./: .gitignore  README.md  package.json
ai/: .env.example  .gitignore  main.py  pyproject.toml
ai/config/: collection_name.py  constants.py  qdrant_config.py
ai/llm_providers/: base.py  gemini_provider.py  ollama_provider.py  openrouter_provider.py
ai/models/: api_model.py  chat_model.py  chatbot_model.py  document_model.py
ai/routes/: chatbot_router.py  embed_router.py  llm_router.py  main_router.py
ai/services/: chatbot_service.py  chunk_data.py  document.py  embedding.py  preprocessor.py  response_generator.py  store.py  upload.py
ai/test/: test_ollama_provider.py
ai/utils/: collection.py  embedder.py  logger.py  qdrant_db.py  response_formatter.py
backend/: .env.example  .prettierrc  git-script.sh  jest.config.js  package.json  test-requirements-template.md
backend/src/: app.module.ts  main.ts
backend/src/ai/: ai.module.ts  chat-ai.service.ts  document-embedding-pipeline.service.ts  document-processor.service.ts  embeddings.service.ts  qdrant.service.ts
backend/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts  test-requirements.md  websocket-auth.service.ts
backend/src/chat/: chat.controller.ts  chat.gateway.ts  chat.module.ts  chat.service.ts
backend/src/chatbots/: chatbot.css  chatbot.js  chatbots-public.controller.ts  (+3 more)
chatbot-test/: index.html
frontend/: .env.example  .gitignore  .prettierrc  README.md  index.html  package.json
frontend/public/: chatbot.css  chatbot.js  pdf.worker.min.mjs
frontend/src/: App.tsx  index.css  router.tsx
(+258 files in other folders)
